samples/_failures_safe/1761539221_96bf01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94a68c18.c: In function ‘main’:
./samples/SAFE/__tmp_94a68c18.c:158:5: error: expected declaration or statement at end of input
  158 |     printf("Enter %zu elements for second matrix:\n", rows2 * cols2);
      |     ^~~~~~
